--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/myself.PNG" width="300 " height="400"></td>
+            <td><img src="myself.PNG" width="300 " height="400"></td>
             <td>
                 <h1>Jesse Ian Causing</h1>
 
